@@ -39,6 +39,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ## Fixes
 - `buildingplan`: upright spike traps are now placed extended rather than retracted
 - `buildingplan`: fixed material filter getting lost for planning buildings on save/reload
+- `buildingplan`: respect building size limits (e.g. roads and bridges cannot be more than 31 tiles in any dimension)
 - `tailor`: now properly discriminates between dyed and undyed cloth, no longer defaults to using adamantine, and properly tracks material requirements for already queued orders
 
 ## Misc Improvements
